--- a/ppmtool-be/src/main/resources/application.properties
+++ b/ppmtool-be/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 server.port=8085
 spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ppmtool_db
+spring.datasource.username=ppmtooluser
+spring.datasource.password=ppmtooluser
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto=validate
