--- a/ppmtool-be/src/main/resources/application-dev.properties
+++ b/ppmtool-be/src/main/resources/application-dev.properties
@@ -10,4 +10,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=validate
 
-spring.profiles.active=prod
+spring.profiles.active=dev
