--- a/ppmtool-be/src/main/resources/application-prod.properties
+++ b/ppmtool-be/src/main/resources/application-prod.properties
@@ -8,6 +8,6 @@ spring.datasource.password=ppmtooluser
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 spring.profiles.active=prod
